--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zanysoft/laravel-roles",
-    "description": "Powerful package for handling roles and permissions in Laravel. Supports Laravel 5.3+",
+    "description": "Powerful package for handling roles and permissions in Laravel. Supports Laravel 5.5+",
     "keywords": [
         "roles",
         "permissions",
@@ -15,8 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*"
+        "php": ">=7.1",
+        "laravel/framework": "^5.5|^6.0|^7.0|^8.0"
     },
     "autoload": {
         "files": [
